build(npm): add npm dep: element-ui

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "estart": "electron ."
   },
   "dependencies": {
+    "element-ui": "^2.3.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
