--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "element-ui": "^2.3.9",
     "vue": "^2.5.2",
+    "vue-codemirror-lite": "^1.0.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
