--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.3.9",
     "koa": "^2.5.1",
     "vue": "^2.5.2",
